--- a/package.json
+++ b/package.json
@@ -1,34 +1,27 @@
 {
-	"name": "mern_todo_app",
+	"name": "react-google-books",
 	"version": "1.0.0",
 	"description": "",
 	"main": "server.js",
-	"dependencies": {
-		"concurrently": "^5.1.0",
-		"express": "^4.17.1",
-		"mongoose": "^5.9.9",
-		"nodemon": "^2.0.3"
-	},
-	"devDependencies": {},
 	"scripts": {
-		"start": "if-env NODE_ENV=production && npm run start:prod || npm run start:dev",
-		"start:prod": "node server.js",
-		"start:dev": "concurrently \"nodemon --ignore 'client/*'\" \"npm run client\"",
-		"client": "cd client && npm run start",
-		"seed": "node scripts/seedDB.js",
-		"install": "cd client && npm install",
-		"build": "cd client && npm run build",
-		"heroku-postbuild": "npm run build"
+	  "start": "if-env NODE_ENV=production && npm run start:prod || npm run start:dev",
+	  "start:prod": "node server.js",
+	  "start:dev": "concurrently \"nodemon --ignore 'client/*'\" \"npm run client\"",
+	  "client": "cd client && npm run start",
+	  "install": "cd client && npm install",
+	  "build": "cd client && npm run build",
+	  "heroku-postbuild": "npm run build"
 	},
-	"repository": {
-		"type": "git",
-		"url": "git+https://github.com/estivensal7/mern_todo_app.git"
-	},
-	"keywords": [],
 	"author": "",
 	"license": "ISC",
-	"bugs": {
-		"url": "https://github.com/estivensal7/mern_todo_app/issues"
+	"devDependencies": {
+	  "concurrently": "^4.1.0",
+	  "nodemon": "^1.18.7"
 	},
-	"homepage": "https://github.com/estivensal7/mern_todo_app#readme"
-}
+	"dependencies": {
+	  "axios": "^0.18.0",
+	  "express": "^4.16.3",
+	  "if-env": "^1.0.4",
+	  "mongoose": "^5.3.16"
+	}
+  }
